# ceres_workshop

./: .gitmodules  CMakeLists.txt  README.md
data/: curve_fitting_data.txt
src/: CMakeLists.txt
src/ch6/: CMakeLists.txt  main.cpp
src/common/: debug.hpp  rotation.hpp
src/curve_fitting_autodiff/: CMakeLists.txt  main.cpp
src/curve_fitting_autodiff_two_var/: CMakeLists.txt  main.cpp
src/curve_fitting_jacobian/: CMakeLists.txt  main.cpp
src/curve_fitting_jacobian/include/: costfunctor.hpp
src/curve_fitting_jacobian_two_var/: CMakeLists.txt  main.cpp
src/curve_fitting_jacobian_two_var/include/: costfunctor.hpp
src/curve_fitting_numdiff/: CMakeLists.txt  main.cpp
src/curve_fitting_two_var/: CMakeLists.txt  main.cpp
src/fileio/: CMakeLists.txt  txtio.cpp  txtio.hpp
src/manual_jac_muti_dim/: CMakeLists.txt  main.cpp
src/manual_jac_muti_dim/include/: mean_cost.hpp
src/manual_jac_one_dim/: CMakeLists.txt  main.cpp
src/manual_jac_one_dim/include/: line_fit_cost.hpp
src/pose_graph_autodiff/: CMakeLists.txt  main.cpp
src/pose_graph_autodiff/include/: pose_manifold.cpp  pose_manifold.hpp
src/pose_graph_jacobian/: CMakeLists.txt  main.cpp
src/pose_graph_jacobian/include/: costfunctor.hpp  pose_manifold.cpp  pose_manifold.hpp
src/pose_graph_lie/: CMakeLists.txt  main.cpp
src/pose_graph_lie/include/: costfunctor.hpp  pose_manifold.cpp  pose_manifold.hpp
src/pose_graph_numdiff/: CMakeLists.txt  main.cpp
src/pose_graph_numdiff/include/: costfunctor.hpp  pose_manifold.cpp  pose_manifold.hpp
src/simple_case_muti_dim/: CMakeLists.txt  main.cpp
src/simple_case_one_dim/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  main.cpp
