add_subdirectory(fileio)
add_subdirectory(curve_fitting_autodiff)
add_subdirectory(curve_fitting_numdiff)
add_subdirectory(curve_fitting_jacobian)
add_subdirectory(curve_fitting_autodiff_two_var)
add_subdirectory(curve_fitting_jacobian_two_var)
add_subdirectory(pose_graph_numdiff)
add_subdirectory(pose_graph_jacobian)
add_subdirectory(test)